// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-iac-security - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Static pre-deployment security scan of Azure IaC (ARM, Bicep, Terraform) against MCSB v3.0 and MITRE ATT&CK. WHEN: "scan my IaC for security before deploy", "check my template against MCSB".",
  "extractedKeywords": [
    "against",
    "aks",
    "app service",
    "azure",
    "before",
    "bicep",
    "check",
    "container",
    "cosmos",
    "deploy",
    "function",
    "iac",
    "identity",
    "key vault",
    "mcp",
    "mcsb",
    "mitre",
    "pre-deployment",
    "rbac",
    "redis",
    "scan",
    "security",
    "sql",
    "static",
    "storage",
    "template",
    "terraform",
    "when",
  ],
  "name": "azure-iac-security",
}
`;

exports[`azure-iac-security - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "against",
  "aks",
  "app service",
  "azure",
  "before",
  "bicep",
  "check",
  "container",
  "cosmos",
  "deploy",
  "function",
  "iac",
  "identity",
  "key vault",
  "mcp",
  "mcsb",
  "mitre",
  "pre-deployment",
  "rbac",
  "redis",
  "scan",
  "security",
  "sql",
  "static",
  "storage",
  "template",
  "terraform",
  "when",
]
`;
